--- a/k8s/namespaces/toffee/toffee-backend/toffee-recipe-backend.yaml
+++ b/k8s/namespaces/toffee/toffee-backend/toffee-recipe-backend.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: plum-recipe-backend
-    version: 0.8.1
+    version: 0.8.2
   values:
     java:
       image: hmctspublic.azurecr.io/plum/recipe-backend:prod-d58c633f
@@ -21,7 +21,8 @@ spec:
       keyVaults:
         toffee:
           secrets:
-          - recipe-backend-POSTGRES-PASS
+          - name: recipe-backend-POSTGRES-PASS
+            alias: POSTGRES_PASSWORD
       environment:
         POSTGRES_HOST: "toffee-{{ .Values.global.environment }}.postgres.database.azure.com"
         POSTGRES_DATABASE: "toffee"
