--- a/k8s/environments/prod/cluster-00/mi/mi-extraction-service-recovery.yaml
+++ b/k8s/environments/prod/cluster-00/mi/mi-extraction-service-recovery.yaml
@@ -7,9 +7,9 @@ metadata:
   annotations:
     flux.weave.works/automated: "true"
     repository.fluxcd.io/job: job.image
-    filter.fluxcd.io/job: glob:stg-*
+    filter.fluxcd.io/job: glob:prod-*
     repository.fluxcd.io/smoke: job.smoketests.image
-    filter.fluxcd.io/smoke: glob:stg-*
+    filter.fluxcd.io/smoke: glob:prod-*
 spec:
   releaseName: mi-extraction-service-recovery
   chart:
@@ -18,10 +18,14 @@ spec:
     ref: master
   values:
     job:
-      image: sdshmctspublic.azurecr.io/mi-extraction-service:stg-2c2a120
+      image: sdshmctspublic.azurecr.io/mi-extraction-service:prod-2c2a120
       suspend: false
       kind: Job
       activeDeadlineSeconds: 82800 #23 hours
+      memoryRequests: '2048Mi'
+      cpuRequests: '200m'
+      memoryLimits: '4096Mi'
+      cpuLimits: '2000m'
       labels:
         app.kubernetes.io/instance: mi-extraction-service-recovery
         app.kubernetes.io/name: mi-extraction-service-recovery
@@ -35,17 +39,18 @@ spec:
           - sftp-remote-password
           - encryption-publicKey
       environment:
-        APPINSIGHTS_INSTRUMENTATIONKEY: "5be27762-da20-4aaf-bc55-6b95a0c6ef6d"
-        MI_CLIENT_ID: 6844ae4d-1934-4eaa-9fe7-ca50cb32e1bd
-        RETRIEVE_FROM_DATE: 2021-03-08
-        RETRIEVE_TO_DATE: 2021-03-16
+        APPINSIGHTS_INSTRUMENTATIONKEY: "8bfa6e68-ae68-442c-a237-83cde3b092f3"
+        MI_CLIENT_ID: e8a52cff-ef0c-4447-baf2-665c3480d0de
+        RETRIEVE_FROM_DATE: "2021-03-08"
+        RETRIEVE_TO_DATE: "2021-03-16"
         SFTP_ENABLED: true
         SFTP_FORCECHECK: true
+        SFTP_FILE_ENCRYPTION_ENABLED: true
         SFTP_REMOTE_HOST: 10.24.254.130
         SFTP_REMOTE_PORT: 22
-        SFTP_REMOTE_FOLDER: files/mi-platform-export/stagingtest/
+        SFTP_REMOTE_FOLDER: /files/mi-platform-export/
       smoketests:
-        image: sdshmctspublic.azurecr.io/mi-extraction-service:stg-2c2a120
+        image: sdshmctspublic.azurecr.io/mi-extraction-service:prod-2c2a120
         enabled: true
       testsConfig:
         keyVaults:
@@ -58,16 +63,14 @@ spec:
             - sftp-remote-password
             - encryption-publicKey
         environment:
-          APPINSIGHTS_INSTRUMENTATIONKEY: "5be27762-da20-4aaf-bc55-6b95a0c6ef6d"
-          MI_CLIENT_ID: 6844ae4d-1934-4eaa-9fe7-ca50cb32e1bd
+          APPINSIGHTS_INSTRUMENTATIONKEY: "8bfa6e68-ae68-442c-a237-83cde3b092f3"
+          MI_CLIENT_ID: e8a52cff-ef0c-4447-baf2-665c3480d0de
           SFTP_ENABLED: false
           SFTP_REMOTE_HOST: 10.24.254.130
           SFTP_REMOTE_PORT: 22
-          SFTP_REMOTE_FOLDER: files/mi-platform-export/
+          SFTP_REMOTE_FOLDER: /files/mi-platform-export/
           SFTP_FORCECHECK: true
-          DUMMY: false
-
     global:
-      subscriptionId: "74dacd4f-a248-45bb-a2f0-af700dc4cf68"
+      subscriptionId: "5ca62022-6aa2-4cee-aaa7-e7536c8d566c"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
-      environment: "stg"
+      environment: "prod"
