update frontend to point to correct backend ingress

--- a/k8s/environments/sbox/common-overlay/toffee/frontend-patch.yaml
+++ b/k8s/environments/sbox/common-overlay/toffee/frontend-patch.yaml
@@ -8,5 +8,7 @@ spec:
   values:
     nodejs:
       ingressHost: toffee.sandbox.platform.hmcts.net
+      environment:
+        RECIPE_BACKEND_URL: toffee-recipe-backend.{{ .Values.global.environment }}.platform.hmcts.net
     global:
       environment: sandbox
