--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,10 +15,11 @@ jobs:
       - uses: actions/checkout@v1
       - name: Install pre-reqs
         run: |
+          sudo apt update
+          sudo apt install snapd
           sudo apt-get install -y yamllint
           sudo add-apt-repository ppa:rmescandon/yq
-          sudo apt update
-          sudo apt-get install yq=4.6 -y
+          sudo snap install yq
       - name: Kustomize Tests
         run: ./tests/test-kustomize.sh
       - name: Lint Tests
