amend tests.yml

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,10 +16,8 @@ jobs:
       - name: Install pre-reqs
         run: |
           sudo apt update
-          sudo apt install snapd
           sudo apt-get install -y yamllint
-          sudo add-apt-repository ppa:rmescandon/yq
-          sudo snap install yq
+          sudo apt install -y yq
       - name: Kustomize Tests
         run: ./tests/test-kustomize.sh
       - name: Lint Tests
