--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,9 +16,9 @@ jobs:
       - name: Install pre-reqs
         run: |
           sudo apt update
-          sudo apt install snapd
           sudo apt-get install -y yamllint
-          sudo snap install yq
+      - name: Install yq
+        run: ./tests/install-yq.sh
       - name: Kustomize Tests
         run: ./tests/test-kustomize.sh
       - name: Lint Tests
