--- a/k8s/namespaces/video-hearings/kustomization.yaml
+++ b/k8s/namespaces/video-hearings/kustomization.yaml
@@ -15,3 +15,4 @@ resources:
 - vh-video-web/vh-video-web.yaml
 - vh-admin-web/vh-admin-web.yaml
 - vh-service-web/vh-service-web.yaml
+- vh-busybox-test/vh-busybox-test.yaml 
