--- a/k8s/namespaces/vh/vh-busybox-test/vh-busybox-test.yaml
+++ b/k8s/namespaces/vh/vh-busybox-test/vh-busybox-test.yaml
@@ -4,12 +4,34 @@ kind: Pod
 metadata:
   name: vh-busybox-test
   namespace: vh
+  labels:
+    aadpodidbinding: vh-aad-identity
 spec:
   containers:
     - name: vh-busybox-test
       image: busybox
       command: ['sleep']
-      args: ['36000']
+      args: ['3600']
+      volumeMounts:
+        - name: vault-vh-infra-core
+          readOnly: true
+          mountPath: /mnt/secrets/vh-infra-core
+        - name: vault-vh-busybox
+          readOnly: true
+          mountPath: /mnt/secrets/vh-busybox
   restartPolicy: Never
+  volumes:
+    - name: vault-vh-infra-core
+      csi:
+        driver: secrets-store.csi.k8s.io
+        readOnly: true
+        volumeAttributes:
+          secretProviderClass: vh-busybox-vh-infra-core
+    - name: vault-vh-busybox
+      csi:
+        driver: secrets-store.csi.k8s.io
+        readOnly: true
+        volumeAttributes:
+          secretProviderClass: vh-busybox-vh-busybox
 
 MANIFEST:
