DTSPO-178 Update Sbox kustomization.yaml and Lint prometheus-values.yaml

--- a/k8s/environments/sbox/cluster-00-overlay/kustomization.yaml
+++ b/k8s/environments/sbox/cluster-00-overlay/kustomization.yaml
@@ -12,6 +12,11 @@ bases:
 # - ../../../release/admin/env-injector
 # - ../../../release/kube-system/nodelocaldns
 
+patches:
+- path: ../sbox-helmrelease.yaml
+  target:
+    kind: HelmRelease
+
 patchesStrategicMerge:
 
 #kube-slack patch
