Update prometheus ingress

--- a/k8s/namespaces/monitoring/kube-prometheus-stack/patches/dev/cluster-01/kube-prometheus-stack.yaml
+++ b/k8s/namespaces/monitoring/kube-prometheus-stack/patches/dev/cluster-01/kube-prometheus-stack.yaml
@@ -9,14 +9,14 @@ spec:
     prometheus:
       ingress:
         annotations:
-          kubernetes.io/ingress.class: traefik-private
+          kubernetes.io/ingress.class: traefik
         hosts:
           - sds-prometheus-01.dev.platform.hmcts.net
 
     alertmanager:
       ingress:
         annotations:
-          kubernetes.io/ingress.class: traefik-private
+          kubernetes.io/ingress.class: traefik
         hosts:
           - sds-alertmanager-01.dev.platform.hmcts.net
       config:
