DTSPO-1477 add dev mailrelay cert and update config

--- a/k8s/release/mailrelay/mailrelay/patches/dev/cluster-01/mailrelay.yaml
+++ b/k8s/release/mailrelay/mailrelay/patches/dev/cluster-01/mailrelay.yaml
@@ -5,6 +5,8 @@ metadata:
   name: mailrelay
   namespace: mailrelay
 spec:
+  valueFileSecrets:
+    - name: "dev-mailrelay"
   values:
     image:
       repository: sdshmctspublic.azurecr.io/exim-relay
@@ -13,6 +15,8 @@ spec:
     service:
       type: LoadBalancer
       loadBalancerIP: "10.145.31.31"
+    global:
+      environment: dev
 
     workload: StatefulSet
     
