--- a/k8s/release/admin/secrets-csi-driver/secrets-csi-driver.yaml
+++ b/k8s/release/admin/secrets-csi-driver/secrets-csi-driver.yaml
@@ -19,3 +19,8 @@ spec:
         metricsAddr: ":8090"
       windows:
         metricsAddr: ":8090"
+        tolerations: 
+          - key: "kubernetes.io/os"
+             operator: "Equal"
+            value: "windows"
+            effect: "NoSchedule"
