--- a/k8s/release/mailrelay/mailrelay/patches/dev/cluster-00/mailrelay.yaml
+++ b/k8s/release/mailrelay/mailrelay/patches/dev/cluster-00/mailrelay.yaml
@@ -8,7 +8,7 @@ spec:
   values:
     image:
       repository: sdshmctspublic.azurecr.io/exim-relay
-      tag: 0.4
+      tag: 0.5
       pullPolicy: IfNotPresent
     service:
       type: LoadBalancer
@@ -21,4 +21,11 @@ spec:
       image:
         repository: sdshmctspublic.azurecr.io/fluent/fluent-bit
         tag: 1.7.2
+        pullPolicy: IfNotPresent
+  
+    mtail:
+      enabled: true
+      image:
+        repository: sdshmctspublic.azurecr.io/mtail
+        tag: 0.1
         pullPolicy: IfNotPresent
