--- a/k8s/release/mailrelay/mailrelay/patches/dev/cluster-01/mailrelay.yaml
+++ b/k8s/release/mailrelay/mailrelay/patches/dev/cluster-01/mailrelay.yaml
@@ -8,7 +8,7 @@ spec:
   values:
     image:
       repository: sdshmctspublic.azurecr.io/exim-relay
-      tag: 0.5
+      tag: 0.6
       pullPolicy: IfNotPresent
     service:
       type: LoadBalancer
@@ -29,3 +29,6 @@ spec:
         repository: sdshmctspublic.azurecr.io/mtail
         tag: 0.1
         pullPolicy: IfNotPresent
+    
+    prometheus:
+      enabled: true
