--- a/k8s/release/mailrelay/mailrelay/mailrelay.yaml
+++ b/k8s/release/mailrelay/mailrelay/mailrelay.yaml
@@ -18,7 +18,7 @@ spec:
   values:
     image:
       repository: sdshmctspublic.azurecr.io/exim-relay
-      tag: 0.2
+      tag: 0.4
       pullPolicy: IfNotPresent
 
     service:
@@ -41,3 +41,10 @@ spec:
       limits:
         cpu: 200m
         memory: 256Mi
+
+    fluentbit:
+      enabled: true
+      image:
+        repository: sdshmctspublic.azurecr.io/fluent/fluent-bit
+        tag: 1.7.2
+        pullPolicy: IfNotPresent
