--- a/k8s/environments/sbox/cluster-01-overlay/kustomization.yaml
+++ b/k8s/environments/sbox/cluster-01-overlay/kustomization.yaml
@@ -9,6 +9,7 @@ bases:
 - ../../../namespaces/admin/aad-pod-identity
 - ../../../namespaces/kube-system/aad-pod-identity
 - ../../../namespaces/monitoring/kube-prometheus-stack
+- ../../../namespaces/mi
 # - ../../../release/admin/env-injector
 # - ../../../release/kube-system/nodelocaldns
 
@@ -31,3 +32,6 @@ patchesStrategicMerge:
 
 # env-injector
 # - ../../../release/admin/env-injector/patches/sbox/cluster-00/env-injector.yaml
+
+# mi patch
+- ../../../namespaces/neuvector/patches/sbox/mi.yaml
