--- a/k8s/namespaces/mi/mi-sftp-server/deployment.yaml
+++ b/k8s/namespaces/mi/mi-sftp-server/deployment.yaml
@@ -1,8 +1,22 @@
-apiVersion: apps/v1
 kind: Deployment
+apiVersion: apps/v1
 metadata:
-  name: mi
-  spec:
+  name: mi-sftp-server
+  namespace: mi
+  labels:
+    app: mi-sftp-server
+spec:
+  replicas: 1
+  minReadySeconds: 10
+  selector:
+    matchLabels:
+      app: mi-sftp-server
+  template:
+    metadata:
+      labels:
+        app: mi-sftp-server
+        aadpodidbinding: mi-data-extractor-job
+      spec:
       initContainers:
       - name: install
         image: busybox
