--- a/k8s/environments/sbox/cluster-01-overlay/kustomization.yaml
+++ b/k8s/environments/sbox/cluster-01-overlay/kustomization.yaml
@@ -9,7 +9,7 @@ bases:
 - ../../../namespaces/admin/aad-pod-identity
 - ../../../namespaces/kube-system/aad-pod-identity
 - ../../../namespaces/monitoring/kube-prometheus-stack
-- ../../../namespaces/mi
+- ../../../namespaces/mi/mi-sftp-server
 # - ../../../release/admin/env-injector
 # - ../../../release/kube-system/nodelocaldns
 
