--- a/k8s/environments/test/cluster-01-overlay/kustomization.yaml
+++ b/k8s/environments/test/cluster-01-overlay/kustomization.yaml
@@ -9,7 +9,7 @@ bases:
 - ../../../namespaces/admin/aad-pod-identity
 - ../../../namespaces/kube-system/aad-pod-identity
 - ../../../namespaces/neuvector
-- ../../../namespaces/mi
+- ../../../namespaces/mi/mi-sftp-server
 # - ../../../release/admin/env-injector
 # - ../../../release/kube-system/nodelocaldns
 
@@ -38,6 +38,3 @@ patchesStrategicMerge:
 #neuvector patch
 - ../../../namespaces/neuvector/patches/nonprod/neuvector.yaml
 - ../../../namespaces/neuvector/patches/test/cluster-01/neuvector.yaml
-
-# mi patch
-- ../../../namespaces/mi/patches/test/mi.yaml
