--- a/k8s/environments/sbox/common-overlay/kustomization.yaml
+++ b/k8s/environments/sbox/common-overlay/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
 - toffee
 - vh
+- ../../../namespaces/mi/mi-sftp-server
 patches:
 - path: ../sbox-helmrelease.yaml
   target:
