DTSPO-2168 - update secrets store config for windows nodes

--- a/k8s/release/admin/secrets-csi-driver/secrets-csi-driver.yaml
+++ b/k8s/release/admin/secrets-csi-driver/secrets-csi-driver.yaml
@@ -30,3 +30,5 @@ spec:
       tolerations:
       - effect: NoSchedule
         key: kubernetes.io/os
+        operator: Equal
+        value: windows
