--- a/k8s/environments/prod/cluster-00/mi/mi-extraction-service-recover-data.yaml
+++ b/k8s/environments/prod/cluster-00/mi/mi-extraction-service-recover-data.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
-  name: mi-extraction-service
+  name: mi-extraction-service-recovery
   namespace: mi
   annotations:
     flux.weave.works/automated: "true"
@@ -11,7 +11,7 @@ metadata:
     repository.fluxcd.io/smoke: job.smoketests.image
     filter.fluxcd.io/smoke: glob:prod-*
 spec:
-  releaseName: mi-extraction-service
+  releaseName: mi-extraction-service-recovery
   chart:
     git: git@github.com:hmcts/shared-services-flux
     path: k8s/release/mi/mi-extraction-service
@@ -27,8 +27,8 @@ spec:
       memoryLimits: '4096Mi'
       cpuLimits: '2000m'
       labels:
-        app.kubernetes.io/instance: mi-extraction-service
-        app.kubernetes.io/name: mi-extraction-service
+        app.kubernetes.io/instance: mi-extraction-service-recovery
+        app.kubernetes.io/name: mi-extraction-service-recovery
       keyVaults:
         "mi-vault":
           excludeEnvironmentSuffix: false
