--- a/k8s/namespaces/mi/mi-house-keeping-service/mi-house-keeping-service-identity.yaml
+++ b/k8s/namespaces/mi/mi-house-keeping-service/mi-house-keeping-service-identity.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: mi
 spec:
   type: 0
-  resourceID: /subscriptions/a8140a9e-f1b0-481f-a4de-09e2ee23f7ab/resourceGroups/managed-identities-sbox-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-housekeeping-service-sbox-mi
-  clientID: f74e3f17-9785-480b-8bd4-fcac2b53c682
+  resourceID: replace
+  clientID: replace
