--- a/k8s/namespaces/mi/mi-integration-service/mi-integration-service-identity.yaml
+++ b/k8s/namespaces/mi/mi-integration-service/mi-integration-service-identity.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: mi
 spec:
   type: 0
-  resourceID: /subscriptions/a8140a9e-f1b0-481f-a4de-09e2ee23f7ab/resourceGroups/managed-identities-sbox-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-integration-service-sbox-mi
-  clientID: 9278a876-6f8a-489d-9053-01c996a7b6f6
+  resourceID: replace
+  clientID: replace
