--- a/k8s/namespaces/mi/mi-staging-service/mi-staging-service-identity.yaml
+++ b/k8s/namespaces/mi/mi-staging-service/mi-staging-service-identity.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: mi
 spec:
   type: 0
-  resourceID: /subscriptions/a8140a9e-f1b0-481f-a4de-09e2ee23f7ab/resourceGroups/managed-identities-sbox-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-staging-service-sbox-mi
-  clientID: be4e8434-ade8-4d4c-9d80-fab87f21c48b
+  resourceID: replace
+  clientID: replace
