add another file

--- a/k8s/namespaces/mi/kustomization.yaml
+++ b/k8s/namespaces/mi/kustomization.yaml
@@ -13,4 +13,4 @@ resources:
 - mi-integration-service/mi-integration-service-binding.yaml
 - mi-staging-service/mi-staging-service.yaml
 - mi-staging-service/mi-staging-service-binding.yaml
-- toffee-frontend/toffee-frontend.yaml
+- mi-developer-rbac.yaml
