--- a/k8s/namespaces/mi/mi-sftp-server/deployment.yaml
+++ b/k8s/namespaces/mi/mi-sftp-server/deployment.yaml
@@ -11,44 +11,49 @@ spec:
   selector:
     matchLabels:
       app: mi-sftp-server
+      aadpodidbinding: mi-data-extractor-job
   template:
-    metadata:
+    spec:
+      containers:
+      - name: mi-sftp-server
+        image: atmoz/sftp:latest
+      metadata:
       labels:
         app: mi-sftp-server
         aadpodidbinding: mi-data-extractor-job
       spec:
       initContainers:
-      - name: install
-        image: busybox
-        command: ["/bin/sh", "-c", "printf '%s:%s:1000::/files/mi-platform-export/'  $(cat /kvmnt/sftp-remote-user) $(cat /kvmnt/sftp-remote-password) > /sftp-config/users.conf"]
-        volumeMounts:
-        - name: azurekeyvault
-          mountPath: /kvmnt
-          readOnly: true
-        - name: config-cache
-          mountPath: /sftp-config
-      containers:
+        - name: install
+          image: busybox
+          command: ["/bin/sh", "-c", "printf '%s:%s:1000::/files/mi-platform-export/'  $(cat /kvmnt/sftp-remote-user) $(cat /kvmnt/sftp-remote-password) > /sftp-config/users.conf"]
+          volumeMounts:
+            - name: azurekeyvault
+              mountPath: /kvmnt
+              readOnly: true
+            - name: config-cache
+              mountPath: /sftp-config
+    containers:
       - name: mi-sftp-server
         image: atmoz/sftp:latest
         imagePullPolicy: Always
         volumeMounts:
-        - name: azurekeyvault
-          mountPath: /kvmnt
-          readOnly: true
-        - name: config-cache
-          mountPath: /etc/sftp
-        ports:
-        - containerPort: 22
-        securityContext:
-          capabilities:
-            add: ["SYS_ADMIN"]
-        resources: {}
-      volumes:
-      - name: csi-volume
-        csi:
-          driver: secrets-store.csi.k8s.io
-          readOnly: true
-          volumeAttributes:
-            secretProviderClass: "mi-extraction-service-job-vault-secret-provider"
+      - name: azurekeyvault
+        mountPath: /kvmnt
+        readOnly: true
       - name: config-cache
-        emptyDir: {}
+        mountPath: /etc/sftp
+        ports:
+          - containerPort: 22
+            securityContext:
+            capabilities:
+            add: ["SYS_ADMIN"]
+            resources: {}
+            volumes:
+          - name: azurekeyvault
+            csi:
+            driver: secrets-store.csi.k8s.io
+            readOnly: true
+            volumeAttributes:
+              secretProviderClass: "mi-extraction-service-job-vault-secret-provider"
+          - name: config-cache
+            emptyDir: {}
