--- a/k8s/namespaces/mi/mi-sftp-server/kustomization.yaml
+++ b/k8s/namespaces/mi/mi-sftp-server/kustomization.yaml
@@ -1,5 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: mi
 resources:
-- ../../../../namespaces/mi
-- ../../../../namespaces/mi/mi-sftp-server
+- deployment.yaml
+- service.yaml
+- ../namespace.yaml
