deploy mi-sftp-server to sbox and test only

--- a/k8s/environments/sbox/common-overlay/mi/mi-sftp-server.yaml
+++ b/k8s/environments/sbox/common-overlay/mi/mi-sftp-server.yaml
@@ -53,3 +53,17 @@ spec:
               secretProviderClass: "mi-extraction-service-job-vault-secret-provider"
         - name: config-cache
           emptyDir: {}
+
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: mi-sftp-server-svc
+  namespace: mi
+spec:
+  ports:
+  - protocol: TCP
+    port: 2000
+    targetPort: 22
+  selector:
+    app: mi-sftp-server
