--- a/k8s/environments/sbox/common-overlay/mi/kustomization.yaml
+++ b/k8s/environments/sbox/common-overlay/mi/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../../../../namespaces/mi
-- ../../../../namespaces/mi/mi-sftp-server
+- mi-sftp-server.yaml
 
 patches:
 - target:
