--- a/k8s/environments/test/common-overlay/mi/kustomization.yaml
+++ b/k8s/environments/test/common-overlay/mi/kustomization.yaml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../../../../namespaces/mi
-- ../../../../namespaces/mi/mi-sftp-server
+- mi-sftp-server.yaml
