Fixed chart issue with MI

--- a/k8s/release/mi/mi-azure-functions/templates/secretprovider.yaml
+++ b/k8s/release/mi/mi-azure-functions/templates/secretprovider.yaml
@@ -14,7 +14,7 @@ spec:
       type: Opaque
   {{- end }}
   parameters:
-    usePodIdentity: true
+    usePodIdentity: "true"
     keyvaultName: {{ .Values.keyVaultName }}-{{ .Values.environment }}
     objects: |
         array:
