--- a/k8s/namespaces/mi/mi-sftp-server/kustomization.yaml
+++ b/k8s/namespaces/mi/mi-sftp-server/kustomization.yaml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: mi
 resources:
-- ../../../../namespaces/mi/mi-sftp-server
+- mi-sftp-server.yaml
