--- a/k8s/environments/prod/cluster-00/mi/mi-azure-functions.yaml
+++ b/k8s/environments/prod/cluster-00/mi/mi-azure-functions.yaml
@@ -22,3 +22,4 @@ spec:
     resourcegroup: "mi-prod-rg"
     subscriptionId: "5ca62022-6aa2-4cee-aaa7-e7536c8d566c"
     tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
+    replicaCount: 0 # Disables creating any pods
