--- a/k8s/environments/ithc/cluster-00/mi/mi-azure-functions.yaml
+++ b/k8s/environments/ithc/cluster-00/mi/mi-azure-functions.yaml
@@ -22,3 +22,4 @@ spec:
     resourcegroup: "mi-ithc-rg"
     subscriptionId: "ba71a911-e0d6-4776-a1a6-079af1df7139"
     tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
+    replicaCount: 0
