--- a/k8s/environments/ithc/common/mi/mi-azure-functions.yaml
+++ b/k8s/environments/ithc/common/mi/mi-azure-functions.yaml
@@ -6,19 +6,20 @@ metadata:
   namespace: mi
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.job: glob:pr-*
+    flux.weave.works/tag.job: glob:ithc-*
 spec:
   releaseName: mi-azure-functions
   chart:
     git: git@github.com:hmcts/shared-services-flux
     path: k8s/release/mi/mi-azure-functions
-    ref: azure-function-charts
+    ref: master
   values:
     labels:
       app.kubernetes.io/instance: mi-azure-functions-deployment
       app.kubernetes.io/name: mi-azure-functions-deployment
-    image: sdshmctspublic.azurecr.io/mi/azure-functions:pr-3-30d9b06
-    environment: "test"
-    resourcegroup: "mi-test-rg"
-    subscriptionId: "3eec5bde-7feb-4566-bfb6-805df6e10b90"
+    image: sdshmctspublic.azurecr.io/mi/azure-functions:ithc
+    environment: "ithc"
+    resourcegroup: "mi-ithc-rg"
+    subscriptionId: "ba71a911-e0d6-4776-a1a6-079af1df7139"
     tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
+    replicaCount: 0 # Disables pod deployment
