--- a/k8s/environments/sbox/common/mi/mi-azure-functions.yaml
+++ b/k8s/environments/sbox/common/mi/mi-azure-functions.yaml
@@ -12,13 +12,13 @@ spec:
   chart:
     git: git@github.com:hmcts/shared-services-flux
     path: k8s/release/mi/mi-azure-functions
-    ref: azure-function-charts
+    ref: master
   values:
     labels:
       app.kubernetes.io/instance: mi-azure-functions-deployment
       app.kubernetes.io/name: mi-azure-functions-deployment
-    image: sdshmctspublic.azurecr.io/mi/azure-functions:pr-3-30d9b06
-    environment: "dev"
-    resourcegroup: "mi-dev-rg"
-    subscriptionId: "867a878b-cb68-4de5-9741-361ac9e178b6"
+    image: sdshmctspublic.azurecr.io/mi/azure-functions:pr-2-ab479d2
+    environment: "sbox"
+    resourcegroup: "mi-sbox-rg"
+    subscriptionId: "a8140a9e-f1b0-481f-a4de-09e2ee23f7ab"
     tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
