--- a/k8s/environments/stg/common/juror-digital/jd-public.yaml
+++ b/k8s/environments/stg/common/juror-digital/jd-public.yaml
@@ -5,8 +5,8 @@ metadata:
   name: jd-public
   namespace: jd
   annotations:
-    flux.weave.works/automated: "false"
-    flux.weave.works/tag.chart-image: glob:2.*
+    fluxcd.io/automated: "true"
+    filter.fluxcd.io/tag.chart-image: glob:2.*
 spec:
   releaseName: jd-public
   chart:
@@ -17,11 +17,3 @@ spec:
     nodejs:
       image: ssprivatestg.azurecr.io/jd/juror_digital_public_portal:2.21.427
       ingressHost: 'jdfrontend-nle.platform.hmcts.net'
-      ingressSessionAffinity:
-        enabled: true
-        sessionCookieName: ""
-      environment:
-        API_ENDPOINT: http://moj-nle-reverse-proxy/api/v1/
-        PORT: 3000
-        USE_AUTH: false
-        NODE_ENV: development
