--- a/k8s/namespaces/monitoring/kube-prometheus-stack/patches/sbox/cluster-00/kube-prometheus-stack.yaml
+++ b/k8s/namespaces/monitoring/kube-prometheus-stack/patches/sbox/cluster-00/kube-prometheus-stack.yaml
@@ -16,7 +16,7 @@ spec:
     alertmanager:
       ingress:
         annotations:
-          kubernetes.io/ingress.class: traefik-private
+          kubernetes.io/ingress.class: traefik
         hosts:
           - sds-alertmanager-00.sandbox.platform.hmcts.net
       config:
