--- a/k8s/environments/stg/common-overlay/juror-digital/jd-public-patch.yaml
+++ b/k8s/environments/stg/common-overlay/juror-digital/jd-public-patch.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: jd-public
-  namespace: jd
+  namespace: juror-digital
 spec:
   values:
     nodejs:
