--- a/k8s/namespaces/juror-digital/namespace.yaml
+++ b/k8s/namespaces/juror-digital/namespace.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: jd
+  name: juror-digital
   labels:
     slackChannel: platops-build-notices
     hmcts.github.com/envInjector: enabled
