--- a/k8s/environments/stg/common-overlay/juror-digital/kustomization.yaml
+++ b/k8s/environments/stg/common-overlay/juror-digital/kustomization.yaml
@@ -10,3 +10,9 @@ patches:
     kind: HelmRelease
     name: jd-public
   path: jd-public-patch.yaml
+- target:
+    group: helm.fluxcd.io
+    version: v1
+    kind: HelmRelease
+    name: jd-bureau
+  path: jd-bureau-patch.yaml
