Updated mi-azure-functions identity and converted test env to kustomize

--- a/k8s/environments/sbox/common-overlay/mi/kustomization.yaml
+++ b/k8s/environments/sbox/common-overlay/mi/kustomization.yaml
@@ -35,3 +35,9 @@ patches:
     kind: AzureIdentity
     name: mi
   path: mi-staging-service-identity-patch.yaml
+- target:
+    group: helm.fluxcd.io
+    version: v1
+    kind: AzureIdentity
+    name: mi
+  path: mi-azure-functions-identity-patch.yaml
