--- a/k8s/environments/dev/common-overlay/mi/mi-azure-functions-identity-patch.yaml
+++ b/k8s/environments/dev/common-overlay/mi/mi-azure-functions-identity-patch.yaml
@@ -1,6 +1,6 @@
 - op: replace
   path: /spec/resourceID
-  value: /subscriptions/867a878b-cb68-4de5-9741-361ac9e178b6/resourceGroups/mi-dev-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-ingestion-adf-dev-pod-mi
+  value: /subscriptions/867a878b-cb68-4de5-9741-361ac9e178b6/resourceGroups/mi-dev-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-azure-functions-dev-mi
 - op: replace
   path: /spec/clientID
-  value: c90069e2-4593-4a4b-9d92-c3073aad64c9
+  value: c90069e2-4593-4a4b-9d92-c3073aad64c9 # Replace with updated resource clientId
