comment out certificate details for now

--- a/k8s/release/admin/traefik/traefik.yaml
+++ b/k8s/release/admin/traefik/traefik.yaml
@@ -38,9 +38,9 @@ spec:
     tls:
       options: myTLSOptions
 tls:
-  certificates:
-    certFile: replace
-    keyFile: replace
+  # certificates:
+  #   certFile: replace
+  #   keyFile: replace
   options:
     myTLSOptions:
       enabled: true
