--- a/k8s/environments/test/common-overlay/mi/mi-azure-functions-identity-patch.yaml
+++ b/k8s/environments/test/common-overlay/mi/mi-azure-functions-identity-patch.yaml
@@ -1,7 +1,6 @@
-# Wait until MI is created via infra for test env
-# - op: replace
-#   path: /spec/resourceID
-#   value: /subscriptions/867a878b-cb68-4de5-9741-361ac9e178b6/resourceGroups/mi-dev-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-azure-functions-test-mi
-# - op: replace
-#   path: /spec/clientID
-#   value: c90069e2-4593-4a4b-9d92-c3073aad64c9
+- op: replace
+  path: /spec/resourceID
+  value: /subscriptions/3eec5bde-7feb-4566-bfb6-805df6e10b90/resourceGroups/mi-test-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-azure-functions-test-mi
+- op: replace
+  path: /spec/clientID
+  value: 7bcfb98a-ec24-494f-bced-49c72d7495bd
