--- a/k8s/namespaces/mi/mi-azure-functions/mi-azure-functions-identity.yaml
+++ b/k8s/namespaces/mi/mi-azure-functions/mi-azure-functions-identity.yaml
@@ -1,7 +1,7 @@
 apiVersion: "aadpodidentity.k8s.io/v1"
 kind: AzureIdentity
 metadata:
-  name: mi-integration-service
+  name: mi-azure-functions
   namespace: mi
 spec:
   type: 0
