amend ingress and cluster traefik

--- a/k8s/release/admin/traefik/patches/sbox/cluster-00/traefik.yaml
+++ b/k8s/release/admin/traefik/patches/sbox/cluster-00/traefik.yaml
@@ -14,6 +14,20 @@ spec:
       domain: traefik-ss-00.sandbox.platform.hmcts.net
     accessLogs:
       enabled: true
+    tls:
+      options: myTLSOptions
+tls:
+  options:
+    myTLSOptions:
+      enabled: true
+      minVersion: VersionTLS12
+      cipherSuites:
+        [
+          "TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384",
+          "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256",
+          "TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256",
+          "TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA",
+        ]
     autoscaling:
       minReplicas: 1
       maxReplicas: 2
