--- a/k8s/environments/sbox/common-overlay/toffee/ingress.yaml
+++ b/k8s/environments/sbox/common-overlay/toffee/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ingress-tls
   annotations:
     kubernetes.io/ingress.class: traefik
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    traefik.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   tls:
   - hosts:
