Amend git path for Sandbox Traefik

--- a/k8s/release/admin/traefik/patches/sbox/cluster-00/traefik.yaml
+++ b/k8s/release/admin/traefik/patches/sbox/cluster-00/traefik.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: admin
 spec:
   chart:
-    git: https://github.com/traefik
-    path: traefik-helm-chart/traefik
+    git: https://github.com/traefik/traefik-helm-chart
+    path: traefik
   values:
     imageTag: 2.4.8
     loadBalancerIP: 10.140.15.250
