Amend Git Path for Sandbox Traefik (#832)
* Amend git path for Sandbox Traefik

* Amend git path for Sandbox Traefik

* Amend git path for Sandbox Traefik

* Amend git path for Sandbox Traefik

Co-authored-by: msl8r <72858053+msl8r@users.noreply.github.com>

--- a/k8s/release/admin/traefik/patches/sbox/cluster-00/traefik.yaml
+++ b/k8s/release/admin/traefik/patches/sbox/cluster-00/traefik.yaml
@@ -5,7 +5,8 @@ metadata:
   namespace: admin
 spec:
   chart:
-    git: https://github.com/traefik/traefik-helm-chart
+    git: https://traefik.github.io/traefik-helm-chart
+
     path: traefik
   values:
     imageTag: 2.4.8
